--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,48 @@
+body, html
+{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
 }
+
+.container
+{
+  display: flex;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.left
+{
+  width: 60%;
+  height: 100%;
+  position: relative;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.right
+{
+  width: 40%;
+  height: 100%;
+  margin: 0;
+  overflow: scroll;
+}
+
+#json
+{
+  margin: 0;
+  padding: 16px;
+  box-sizing: border-box;
+  font-family: "Courier New", Consolas, monospace;
+}
+
 #map
 {
     position: absolute;
